@@ -388,6 +388,7 @@ int fptr_whitelist_mesh_cb(mesh_cb_func_t fptr)
 {
 	if(fptr == &libworker_fg_done_cb) return 1;
 	else if(fptr == &libworker_bg_done_cb) return 1;
+	else if(fptr == &libworker_event_done_cb) return 1;
 	else if(fptr == &probe_answer_cb) return 1;
 	return 0;
 }
